syntax="proto3";

option go_package = "/oauth";

package oauth;

message RevokeRequest {
  string userID = 1;
}

message RevokeReply {
  string status = 1;
}

service Oauth {
  rpc RevokeToken(RevokeRequest) returns (RevokeReply);
}